# lambda-calculus

./: .gitignore  README.md  lambda-calculus.cabal
app/: Main.hs
src/: Church.hs  Eval.hs  LambdaCalc.hs
